+升级固件参数内，添加扇区通信延时和大小两个属性；#抽离制造ParamEntity; #修复fbinPath写成ebinPath的bug；

--- a/LBDConfigTool/Properties/Settings.settings
+++ b/LBDConfigTool/Properties/Settings.settings
@@ -17,5 +17,11 @@
     <Setting Name="abinPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="partitionSize" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">4096</Value>
+    </Setting>
+    <Setting Name="partitionTime" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">20</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
