--- a/LBDConfigTool/app.config
+++ b/LBDConfigTool/app.config
@@ -22,6 +22,12 @@
             <setting name="abinPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="partitionSize" serializeAs="String">
+                <value>4096</value>
+            </setting>
+            <setting name="partitionTime" serializeAs="String">
+                <value>20</value>
+            </setting>
         </LBDConfigTool.Properties.Settings>
     </userSettings>
 </configuration>
