--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -79,7 +79,7 @@
   <PropertyGroup />
   <PropertyGroup />
   <PropertyGroup>
-    <ApplicationIcon>灯库软件.ico</ApplicationIcon>
+    <ApplicationIcon>f3.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
@@ -485,6 +485,7 @@
     <Compile Include="Utils\IPreviewPrepareDataCallBack.cs" />
     <Compile Include="Utils\ISaveProjectCallBack.cs" />
     <Compile Include="Utils\Ver2\GlobalBean.cs" />
+    <Content Include="Party.ico" />
     <Content Include="灯库软件.ico" />
     <Content Include="Language\en.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
