【新增】软件内添加CtrlType.ini,内含各种芯片的类型，并把芯片类型的控件改成下拉框；（添加IniUtils工具类） 【优化】数据取反设为复选框，默认不勾选(0)，勾选后表示数据取反(1)；

--- a/LBDConfigTool/LBDConfigTool.csproj
+++ b/LBDConfigTool/LBDConfigTool.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\IniUtils.cs" />
     <Compile Include="Common\SerializeUtils.cs" />
     <Compile Include="ConfForm.cs">
       <SubType>Form</SubType>
@@ -108,6 +109,9 @@
       <DependentUpon>SpecialForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
+    <Content Include="CtrlType.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>PublicSettingsSingleFileGenerator</Generator>
