+两个固件入参：首包延时和fpga升级等待时间；并抽离所有注册表相关数据到同一个saveNUD_ValueChanged中；#版本号更为1.2.1.326；#更新日志；#为各参数进行分区，剥离某些固定值到iniTab中；

--- a/LBDConfigTool/Properties/Settings.settings
+++ b/LBDConfigTool/Properties/Settings.settings
@@ -23,5 +23,11 @@
     <Setting Name="partitionTime" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">20</Value>
     </Setting>
+    <Setting Name="firstRelayTime" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">80</Value>
+    </Setting>
+    <Setting Name="fpgaWaitTime" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">15</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
