--- a/LBDConfigTool/app.config
+++ b/LBDConfigTool/app.config
@@ -28,6 +28,12 @@
             <setting name="partitionTime" serializeAs="String">
                 <value>20</value>
             </setting>
+            <setting name="firstRelayTime" serializeAs="String">
+                <value>80</value>
+            </setting>
+            <setting name="fpgaWaitTime" serializeAs="String">
+                <value>15</value>
+            </setting>
         </LBDConfigTool.Properties.Settings>
     </userSettings>
 </configuration>
