--- a/LBDConfigTool/packages.config
+++ b/LBDConfigTool/packages.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Crc32C.NET" version="1.0.5.0" targetFramework="net40" />
-  <package id="Sharp_Pcap" version="4.2.0" targetFramework="net40" />
+  <package id="Microsoft.NETCore.Platforms" version="5.0.1" targetFramework="net45" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net45" />
+  <package id="PacketDotNet" version="1.2.0" targetFramework="net45" />
+  <package id="Sharp_Pcap" version="4.2.0" targetFramework="net45" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net45" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net45" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net45" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
 </packages>
