+测试键改为加密键，并增加16个字符的加密文本框；#修复自循环导致无法保存一些配置的bug；+默认加载default.abin;

--- a/LBDConfigTool/LBDConfigTool.csproj
+++ b/LBDConfigTool/LBDConfigTool.csproj
@@ -124,6 +124,9 @@
     <EmbeddedResource Include="SpecialForm.resx">
       <DependentUpon>SpecialForm.cs</DependentUpon>
     </EmbeddedResource>
+    <Content Include="default.abin">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="app.config" />
     <Content Include="CtrlType.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
