--- a/LBDConfigTool/app.config
+++ b/LBDConfigTool/app.config
@@ -8,10 +8,10 @@
     <userSettings>
         <LBDConfigTool.Properties.Settings>
             <setting name="ebinPath" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="fbinPath" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="relayTime" serializeAs="String">
                 <value>5</value>
@@ -20,7 +20,7 @@
                 <value>256</value>
             </setting>
             <setting name="abinPath" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="partitionSize" serializeAs="String">
                 <value>4096</value>
@@ -33,6 +33,9 @@
             </setting>
             <setting name="fpgaWaitTime" serializeAs="String">
                 <value>15</value>
+            </setting>
+            <setting name="recordPath" serializeAs="String">
+                <value>C:\Temp\CSJ_SC</value>
             </setting>
         </LBDConfigTool.Properties.Settings>
     </userSettings>
