【优化】去掉加密小窗口的字符数上限，同时如果加密过，则会保存到注册表中；

--- a/LBDConfigTool/Properties/Settings.settings
+++ b/LBDConfigTool/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="recordPath" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:\Temp\CSJ_SC</Value>
     </Setting>
+    <Setting Name="secureStr" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
