--- a/LBDConfigTool/app.config
+++ b/LBDConfigTool/app.config
@@ -37,6 +37,9 @@
             <setting name="recordPath" serializeAs="String">
                 <value>C:\Temp\CSJ_SC</value>
             </setting>
+            <setting name="secureStr" serializeAs="String">
+                <value />
+            </setting>
         </LBDConfigTool.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
