《幻彩灯带控制器》#把v1-v3的版本信息移动到Properties.Settings中，软件默认的版本存储的是V4版本的版本信息；《参数配置器》+在《录制文件》后，自动记录用户使用过的文件名，方便下次使用；

--- a/LBDConfigTool/Properties/Settings.settings
+++ b/LBDConfigTool/Properties/Settings.settings
@@ -35,5 +35,14 @@
     <Setting Name="secureStr" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="scuName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="fileName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="suffixName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">dat</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
