--- a/LBDConfigTool/app.config
+++ b/LBDConfigTool/app.config
@@ -40,6 +40,15 @@
             <setting name="secureStr" serializeAs="String">
                 <value />
             </setting>
+            <setting name="scuName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="fileName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="suffixName" serializeAs="String">
+                <value>dat</value>
+            </setting>
         </LBDConfigTool.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
