--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -57,7 +57,8 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>favicon-20191029044630870.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>MultiLedController.Program</StartupObject>
@@ -230,6 +231,7 @@
     <Content Include="CommonSet.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
