--- a/MultiLedController/Properties/Settings.settings
+++ b/MultiLedController/Properties/Settings.settings
@@ -1,7 +1,15 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="MultiLedController.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="version1" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">1.3.6.605</Value>
+    </Setting>
+    <Setting Name="version2" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">2.1.4.807</Value>
+    </Setting>
+    <Setting Name="version3" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">3.1.0.1029</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
