--- a/LBDConfigTool/Properties/Settings.settings
+++ b/LBDConfigTool/Properties/Settings.settings
@@ -44,5 +44,8 @@
     <Setting Name="suffixName" Type="System.String" Scope="User">
       <Value Profile="(Default)">dat</Value>
     </Setting>
+    <Setting Name="showSecure" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
