--- a/LBDConfigTool/app.config
+++ b/LBDConfigTool/app.config
@@ -70,7 +70,7 @@
   <applicationSettings>
     <LBDConfigTool.Properties.Settings>
       <setting name="showSecure" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
     </LBDConfigTool.Properties.Settings>
   </applicationSettings>
