#优化IniFileHelper->IniHelper;+添加内置的defaultIniHelper变量，以软件目录下的GlobalSet.ini为默认目录，可以取出许多内置的设置；-把很多重复的同名成员方法删掉，只保留相应的静态方法，并用defaultIniHelper来取参数；#优化设备连接的很多流程；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -1,7 +1,4 @@
 ##注意，不要改动"[SkinSet]”的位置，如果放在第一行,设置将不会生效
-[Link]
-lightEditor=false
-oldTools=false
 [Show]
 newMainForm=false
 useSkin=true
@@ -21,4 +18,5 @@ maxStep=100
 maxStepSound=300
 maxStTimes=250
 waitTime=1000
+rebootTime=5000
 soundChangeMode=1
