--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -1,6 +1,6 @@
 ##注意，不要改动"[SkinSet]”的位置，如果放在第一行,设置将不会生效
 [Show]
-newMainForm=false
+newMainForm=true
 useSkin=true
 testButton=false
 hardwareUpdateButton=true
