GlobalSet.ini+sendTime属性，表示两次发送之间的等待时间#NETWORK_WAITTIME=>SEARCH_WAITTIME;+为各个网络连接Form添加Shown事件，以便渲染界面后再进行其他延时操作；

--- a/LightController/App.config
+++ b/LightController/App.config
@@ -49,6 +49,9 @@
       <setting name="exportProjectPath" serializeAs="String">
         <value />
       </setting>
+      <setting name="updateExported" serializeAs="String">
+        <value>False</value>
+      </setting>
     </LightController.Properties.Settings>
   </userSettings>
 </configuration>
