--- a/LightController/Properties/Settings.settings
+++ b/LightController/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="exportProjectPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="updateExported" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
