#搭建成功《外设配置》新版的界面；+ProtocolDataForm及相关的一些方法；《硬件配置》内新增《设备重启》功能；

--- a/LightController/App.config
+++ b/LightController/App.config
@@ -52,6 +52,12 @@
       <setting name="updateExported" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="protocolIndex" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="toolIndex" serializeAs="String">
+        <value>0</value>
+      </setting>
     </LightController.Properties.Settings>
   </userSettings>
 </configuration>
