+TextHelper添加Write(path,IList<string)方法，把string列表逐行放到文本文件中；#整理ToolsForm的代码；+《关联到主界面》左键此次生效，右键保存到硬盘，长期生效；+MainForm加RenderSceneCB()方法，并由子类实现（并分离相应的方法），+sceneListFile文件；#FrameList.txt改为SceneList.txt，并更改目录到Protocol中，并添加SceneList_BAK备份文件；

--- a/LBDConfigTool/app.config
+++ b/LBDConfigTool/app.config
@@ -70,7 +70,7 @@
   <applicationSettings>
     <LBDConfigTool.Properties.Settings>
       <setting name="showSecure" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
     </LBDConfigTool.Properties.Settings>
   </applicationSettings>
