#更新日志；#几个新写的窗口，锁定大小；+《外设配置》TabPage文本横向的事件处理； #《高级属性修改》的《取消》点击事件；

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -549,9 +549,7 @@
       <DependentUpon>XiaosaTestForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Resources\灯光图.png" />
-    <Content Include="安装说明.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="安装说明.txt" />
     <Content Include="更新日志\更新日志.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -679,7 +677,6 @@
     </Content>
     <Content Include="HardwareSet.ini">
       <Generator>ResXFileCodeGenerator</Generator>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="irisSkins\Calmness.ssk">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
