--- a/LBDConfigTool/app.config
+++ b/LBDConfigTool/app.config
@@ -52,6 +52,9 @@
             <setting name="suffixName" serializeAs="String">
                 <value>dat</value>
             </setting>
+            <setting name="zbinPath" serializeAs="String">
+                <value />
+            </setting>
         </LBDConfigTool.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
