-清理HardwareSet.ini文件； -上个提交忘了说明：删去《使用上次连接方式》的几个实际上没用到的方法；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -1,6 +1,6 @@
 ##注意，不要改动"[SkinSet]”的位置，如果放在第一行,设置将不会生效
 [Show]
-newMainForm=true
+newMainForm=false
 useSkin=false
 testButton=false
 hardwareUpdateButton=true
