--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -384,6 +384,12 @@
     <Compile Include="MyForm\OtherTools\ProtocolDataForm.Designer.cs">
       <DependentUpon>ProtocolDataForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\OtherTools\RelayForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\OtherTools\RelayForm.Designer.cs">
+      <DependentUpon>RelayForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\OtherTools\ToolsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -493,6 +499,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\OtherTools\ProtocolDataForm.resx">
       <DependentUpon>ProtocolDataForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\OtherTools\RelayForm.resx">
+      <DependentUpon>RelayForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\OtherTools\ToolsForm.resx">
       <DependentUpon>ToolsForm.cs</DependentUpon>
