--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -449,6 +449,7 @@
     <Compile Include="Tools\CSJ\IMPL\LightControlData.cs" />
     <Compile Include="Tools\CSJ\IMPL\LightInfo.cs" />
     <Compile Include="Tools\CSJ\IMPL\NetworkDeviceInfo.cs" />
+    <Compile Include="Tools\CSJ\IMPL\SequencerData.cs" />
     <Compile Include="Tools\PlayTools.cs" />
     <Compile Include="Tools\SerialPortTools.cs" />
     <Compile Include="Tools\SockTools.cs" />
