++++添加DMX512 串口调试模块

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -475,6 +475,7 @@
     <Compile Include="Utils\IPreviewPrepareDataCallBack.cs" />
     <Compile Include="Utils\ISaveProjectCallBack.cs" />
     <Compile Include="Utils\Ver2\GlobalBean.cs" />
+    <Compile Include="Xiaosa\Tools\SerialPortDMXPlay.cs" />
     <Content Include="Protocol\SceneList_BAK.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
